<resources>
    <string name="app_name">FingerPaint</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!--<string name="menu_text">text</string>-->
    <!--<string name="menu_stamp">switch</string>-->
    <!--<string name="menu_pen_change">pen</string>-->
    <!--<string name="menu_size">size</string>-->
    <!--<string name="menu_selectStamp">stamp</string>-->
    <string name="menu_ok">ok</string>
    <string name="menu_change">change</string>
    <string name="menu_open">open</string>
    <!--<string name="menu_color_change">color</string>-->
    <string name="menu_save">save</string>
    <string name="menu_new">new</string>
</resources>
