<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <!--<item android:id="@+id/menu_stamp"
          android:title="@string/menu_stamp"
          android:icon="@android:drawable/star_off"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_change"
          android:title="@string/menu_stamp"
          android:icon="@android:drawable/ic_popup_sync"
          app:showAsAction="always"/>-->
    <!--<item android:id="@+id/menu_text"
          android:title="@string/menu_text"
          android:icon="@android:drawable/ic_popup_sync"
          app:showAsAction="always"/>-->
    <!--<item android:id="@+id/menu_pen_change"
          android:title="@string/menu_pen_change"
          android:icon="@android:drawable/ic_menu_directions"
          app:showAsAction="always"/>-->
    <!--<item android:id="@+id/menu_size"
          android:title="@string/menu_size"
          android:icon="@android:drawable/ic_menu_sort_by_size"
          app:showAsAction="always"/>-->
    <!--<item android:id="@+id/menu_color_change"
          android:title="@string/menu_color_change"
          android:icon="@android:drawable/ic_popup_sync"
          app:showAsAction="always"/>-->
    <!--<item android:id="@+id/menu_selectStamp"
          android:title="@string/menu_selectStamp"
          android:icon="@android:drawable/ic_menu_set_as"
          app:showAsAction="always"/>-->
    <item android:id="@+id/menu_ok"
          android:title="@string/menu_ok"
          android:icon="@android:drawable/ic_menu_directions"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_change"
          android:title="@string/menu_change"
          android:icon="@android:drawable/ic_popup_sync"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_open"
          android:title="@string/menu_open"
          android:icon="@android:drawable/ic_menu_set_as"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_save"
          android:title="@string/menu_save"
          android:icon="@android:drawable/ic_menu_save"
          app:showAsAction="always"/>
    <item android:id="@+id/menu_new"
          android:title="@string/menu_new"
          android:icon="@android:drawable/ic_menu_add"
          app:showAsAction="always"/>

</menu>
